<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <ImageView
            android:id="@+id/panel_1"
            android:layout_width="380dp"
            android:layout_height="124dp"
            android:layout_marginTop="72dp"
            android:background="@color/green_200"
            app:layout_constraintBottom_toTopOf="@id/panel_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/panel_2"
            android:layout_width="380dp"
            android:layout_height="92dp"
            android:layout_marginTop="16dp"
            android:background="@color/green_200"
            app:layout_constraintBottom_toTopOf="@id/tv_pencapaian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/panel_1" />

        <TextView
            android:id="@+id/tv_pencapaian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="264dp"
            android:text="@string/pencapaian"
            android:textColor="@color/blue_700"
            app:layout_constraintBottom_toTopOf="@id/bar_pencapaian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/panel_2" />

        <ImageView
            android:id="@+id/bar_pencapaian"
            android:layout_width="356dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@color/green_700"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_pencapaian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pencapaian" />

        <TextView
            android:id="@+id/tv_detail_pencapaian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_placeholder"
            android:textColor="@color/blue_700"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar_pencapaian" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_kecamatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="80dp"
            android:text="@string/kecamatan_placeholder"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_ipu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_lihat_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="40dp"
            android:text="@string/lihat_detail"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/tv_ipu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ipu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/indeks_placeholder"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kecamatan" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/Status_placeholder"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_tanggal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ipu" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/tanggal_placeholder"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_kontribusi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="220dp"
            android:text="@string/kontribusi"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_poin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_kontribusi_skor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="28dp"
            android:text="@string/kontribusi_placeholder"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_poin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_poin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/poin"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_peringkat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kontribusi" />

        <TextView
            android:id="@+id/tv_poin_skor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:text="@string/poin"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_peringkat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kontribusi" />

        <TextView
            android:id="@+id/tv_peringkat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/peringkat_home"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_poin" />

        <TextView
            android:id="@+id/tv_peringkat_skor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:text="@string/peringkat_placeholder"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_poin" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>